--- a/flappy.html
+++ b/flappy.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/flappy.css">
 </head>
 
+<!-- Adicionando um comentário -->
+
 <body class="conteudo">
     <h1>Flappy Bird</h1>
     <div wm-flappy></div>
